--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1 class="text-center text-4xl font-bold">TITULO...</h1>
+		<h1 class="text-center text-4xl font-bold">PARA MI PRINCESA GABY</h1>
 		<section></section>
 	</main>
 </Layout>
