--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,6 @@ import Layout from '../layouts/Layout.astro';
 
 <style>
 	html{
-		background-image: url('./fondo1.png');
+		background-image: url('/fondo1.png');
 	}
 </style>
