--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,11 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1 class="text-center text-4xl font-bold">PARA MI PRINCESA GABY</h1>
-		<section></section>
+	<main class="flex justify-center items-center flex-wrap">
+		<h1 class="text-center text-4xl font-bold text-red-500">PARA MI PRINCESA GABY</h1>
+		<img class="w-[300px] h-[400px] rounded-3xl object-cover m-4" src="/fotos/imgprin.jpeg" alt="Foto de gaby">
 	</main>
 </Layout>
-
 <style>
 
 </style>
