--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-gradient-to-tl to-[#ff9a9e] from-[#fad0c4] w-[100vw] h-[100vh]">
+	<body class="bg-gradient-to-tl to-[#ff9a9e] from-[#fad0c4] w-[100vw] h-[100vh] flex justify-center items-center">
 		<slot />
 	</body>
 </html>
