--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Card from '../components/Card.astro'
 ---
 
 <Layout title="Welcome to Astro.">
@@ -7,6 +8,19 @@ import Layout from '../layouts/Layout.astro';
 		<div id="principal" class="flex justify-center items-center flex-wrap">
 			<h1 class="text-center text-4xl font-bold text-red-500">PARA MI PRINCESA GABY</h1>
 			<img class="w-[300px] h-[400px] rounded-3xl object-cover m-4" src="/fotos/imgprin.jpeg" alt="Foto de gaby">
+		</div>
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img1.jpeg` alt="imagen 1">
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">CUANDO EMPEZAMOS A SALIR</h2>
+		</div>
+
+		<div class="flex justify-around items-center mt-[30px]">
+			<button id="anterio" class="p-2 rounded-2xl bg-yellow-300">
+				VOLVER
+			</button>
+			<button id="siguiente" class="p-2 rounded-2xl bg-green-300">
+				SIGUIENTE
+			</button>
 		</div>
 	</main>
 </Layout>
@@ -36,12 +50,17 @@ import Layout from '../layouts/Layout.astro';
 </style>
 <script>
 	const principal=document.getElementById('principal')
+	const cards=document.querySelectorAll('.cards')
+	console.log(cards.length)
 	setTimeout(()=>{
 			principal.classList.add('hidden')
+			cards[0].classList.remove('hidden')
+			cards[0].classList.add('flex')
+
 		},5600)
     setTimeout(()=>{
         console.log('ejecucion... 1')
 		principal.style.animation='1s alternate animationDesv'
-		
     },5000)
+
 </script>
