--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,50 @@ import Card from '../components/Card.astro'
 			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img1.jpeg` alt="imagen 1">
 			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">CUANDO EMPEZAMOS A SALIR</h2>
 		</div>
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img2.jpeg` alt="imagen 2">
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">EN EL AVIÓN EN NUESTRO PRIMER VUELO</h2>
+		</div>
 
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img3.jpeg` alt="imagen 2">
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">EL VIAJE QUE NOS UNIÓ</h2>
+		</div>
+
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img3.jpeg` alt="imagen 2">
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">UNO MÁS PORQUE SÍ</h2>
+		</div>
+
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<video class="w-[300px] h-[400px] rounded-xl" loop autoplay src="/fotos/img5.mp4"></video>
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">SIENDO SIMPLEMENTE NOSOTROS</h2>
+		</div>
+
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl" src="/fotos/imgCumple.jpeg" />
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">CUMPLEAÑOS DE MI PRINCESA</h2>
+		</div>
+
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl" src="/fotos/img6.jpeg" />
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">RECUERDO DE FELICIDAD PLENA</h2>
+		</div>
+		
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl" src="/fotos/img6.jpeg" />
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">SUNSET VIBES</h2>
+		</div>
+
+		<div class="cards hidden justify-center items-center flex-col gap-7">
+			<img class="w-[300px] h-[400px] rounded-xl" src="/fotos/imgFin.jpeg" />
+			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">CON MI PERSONA FAVORITA MI NÚMERO #1</h2>
+		</div>
 		<div class="flex justify-around items-center mt-[30px]">
-			<button id="anterio" class="p-2 rounded-2xl bg-yellow-300">
+			<button id="anterio" class="hidden p-2 rounded-2xl bg-yellow-300">
 				VOLVER
 			</button>
-			<button id="siguiente" class="p-2 rounded-2xl bg-green-300">
+			<button id="siguiente" class="hidden p-2 rounded-2xl bg-green-300">
 				SIGUIENTE
 			</button>
 		</div>
@@ -51,16 +89,29 @@ import Card from '../components/Card.astro'
 <script>
 	const principal=document.getElementById('principal')
 	const cards=document.querySelectorAll('.cards')
-	console.log(cards.length)
+	const anterior = document.getElementById('anterior')
+	const siguiente = document.getElementById('siguiente')
 	setTimeout(()=>{
 			principal.classList.add('hidden')
 			cards[0].classList.remove('hidden')
 			cards[0].classList.add('flex')
-
+			siguiente.classList.remove('hidden')
 		},5600)
     setTimeout(()=>{
         console.log('ejecucion... 1')
 		principal.style.animation='1s alternate animationDesv'
     },5000)
+	let i=0;
+	siguiente.addEventListener(('click'),()=>{
+		if(i===0){
+			console.log('me apretaste')
+			i++;
+		}
+		if(i!==0){
+			i++;
+		}
+	})
+	
+	
 
 </script>
