--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,21 +10,21 @@ import Card from '../components/Card.astro'
 			<img class="w-[300px] h-[400px] rounded-3xl object-cover m-4" src="/fotos/imgprin.jpeg" alt="Foto de gaby">
 		</div>
 		<div class="cards hidden justify-center items-center flex-col gap-7">
-			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img1.jpeg` alt="imagen 1">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src="/fotos/img1.jpeg" alt="imagen 1">
 			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">CUANDO EMPEZAMOS A SALIR</h2>
 		</div>
 		<div class="cards hidden justify-center items-center flex-col gap-7">
-			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img2.jpeg` alt="imagen 2">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src="/fotos/img2.jpeg" alt="imagen 2">
 			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">EN EL AVIÓN EN NUESTRO PRIMER VUELO</h2>
 		</div>
 
 		<div class="cards hidden justify-center items-center flex-col gap-7">
-			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img3.jpeg` alt="imagen 2">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src="/fotos/img3.jpeg" alt="imagen 2">
 			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">EL VIAJE QUE NOS UNIÓ</h2>
 		</div>
 
 		<div class="cards hidden justify-center items-center flex-col gap-7">
-			<img class="w-[300px] h-[400px] rounded-xl object-cover" src=`/fotos/img3.jpeg` alt="imagen 2">
+			<img class="w-[300px] h-[400px] rounded-xl object-cover" src="/fotos/img3.jpeg" alt="imagen 2">
 			<h2 class="text-center text-white p-2 bg-red-500 rounded-xl">UNO MÁS PORQUE SÍ</h2>
 		</div>
 
@@ -107,7 +107,6 @@ import Card from '../components/Card.astro'
 		if(i===0){
 			console.log('me apretaste')
 			anterior.classList.remove('hidden')
-
 			i++;
 		}
 		if(i!==0){
