--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" href="/fotos/imgprin.jpeg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>PARA MI PRINCESA GABY</title>
 	</head>
 	<body class="bg-gradient-to-tl to-[#ff9a9e] from-[#fad0c4] w-[100vw] h-[100vh] flex justify-center items-center">
 		<slot />
