--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout >
 	<main class="">
 		<div id="principal" class="flex justify-center items-center flex-wrap">
 			<h1 class="text-center text-4xl font-bold text-red-500">PARA MI PRINCESA GABY</h1>
