--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@
 		<link rel="icon" href="/fotos/imgprin.jpeg" />
 		<title>PARA MI PRINCESA GABY</title>
 	</head>
-	<body class="bg-gradient-to-tl to-[#ff9a9e] from-[#fad0c4] w-[100vw] h-[100vh] flex justify-center items-center">
+	<body class="bg-gradient-to-tl to-[#ff9a9e] from-[#fad0c4]  flex justify-center items-cente w-[100%] h-[100vh]">
 		<slot />
 	</body>
 </html>
