--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import Cards from "../components/Cards.astro";
 			nombre="CON MI PERSONA FAVORITA MI NÚMERO #1"
 		/>
 		<div class="tequiero hidden p-10  shadow-sm shadow-red-300">
-			<p class="text-center rounded-xl bg-[#82098670] p-2 text-2xl font-bold text-white" >
+			<p class="text-center rounded-xl bg-[#82098625] p-2 text-2xl font-bold text-white" >
 				Te elegí a ti... porque eres la persona que me hace feliz, eres la
 				persona que siempre tengo en mi mente a cada minuto. Por la cual me
 				arriesgué a decirle todo lo que sentía y no me importó nada de nada.
@@ -54,7 +54,7 @@ import Cards from "../components/Cards.astro";
 			</p>
 			
 		</div>
-		<div class="flex justify-around items-center mt-[20px] w-full font-semibold">
+		<div class="flex justify-around items-center w-full font-semibold">
 			<button id="anterior" class="hidden p-2 rounded-2xl bg-yellow-300">
 				VOLVER
 			</button>
