--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Cards from "../components/Cards.astro";
 			</p>
 			
 		</div>
-		<div class="flex justify-around items-center w-full font-semibold">
+		<div class="flex justify-around items-center w-full font-semibold flex-wrap">
 			<button id="anterior" class="hidden p-2 rounded-2xl bg-yellow-300">
 				VOLVER
 			</button>
