--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,10 +40,10 @@ import Cards from "../components/Cards.astro";
 			img="imgFin.jpeg"
 			nombre="CON MI PERSONA FAVORITA MI NÚMERO #1"
 		/>
-		<div class="tequiero w-[80%] hidden grid rounded-3xl place-items-center gap-3">
+		<div class="tequiero w-[90%] hidden grid rounded-3xl place-items-center gap-3">
 			<div class="bg-[#29072b83] relative rounded-xl">
-				<img class="w-full h-full absolute -z-10 object-contain opacity-60  rounded-3xl" src="/fotos/imagFondo.jpeg" alt="fondo foto">
-				<p class="text-center rounded-xl  p-20 text-2xl font-black text-white" >
+				<img class="w-full h-full absolute -z-10 object-cover opacity-60  rounded-3xl" src="/fotos/imagFondo.jpeg" alt="fondo foto">
+				<p class="text-center rounded-xl p-10 text-lg font-black text-white" >
 					Te elegí a ti... porque eres la persona que me hace feliz, eres la
 					persona que siempre tengo en mi mente a cada minuto. Por la cual me
 					arriesgué a decirle todo lo que sentía y no me importó nada de nada.
@@ -57,7 +57,7 @@ import Cards from "../components/Cards.astro";
 			</div>
 			<div class="bg-[#c741ce83] relative rounded-xl">
 				<img class="w-full h-full absolute -z-10 object-cover opacity-60  rounded-3xl" src="/fotos/SunsetBives.jpeg" alt="fondo foto">
-				<p class="text-center rounded-xl  p-20 text-2xl font-black text-white" >
+				<p class="text-center rounded-xl p-10 text-lg font-black text-white" >
 					Quizás no sea la peksona perfecta para ti, cometo errores, tengo miles de defectos; pero, hago lo posible por enamorarte, por hacerte feliz, dia a dia me esfuerzo por darte lo mejor de mi, para que te sientas bien y te sientas feliz junto a mi
 				</p>
 			</div>
